--- a/index.html
+++ b/index.html
@@ -11,11 +11,67 @@
     <title>Bootstrap trial!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div id="carouselExampleControls" class="carousel slide h-75" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="/img/music.jpg" alt="First slide">
+          <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+            <p class="text-uppercase font-weight-bold display-4">5 Things About Me: </p>
+            <p class="text-uppercase font-weight-bold display-4">I Make Music</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/img/surf.jpg" alt="Second slide">
+          <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+            <p class="text-uppercase font-weight-bold display-4">I love to surf </p>
+            <p class="text-uppercase font-weight-bold display-4">and just being around the ocean</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/img/skate.jpg" alt="Third slide">
+          <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+            <p class="text-uppercase font-weight-bold display-4">I like to skate </p>
+            </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/img/ice.jpg" alt="Fourth slide">
+          <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+            <p class="text-uppercase font-weight-bold display-4">I hate the heat  </p>
+            <p class="text-uppercase font-weight-bold display-4">I'd rather be cold than hot </p>
+          </div>
+        </div> 
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/img/coast .jpg" alt="fifth slide">
+          <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+            <p class="text-uppercase font-weight-bold display-4">My life goal is to continue doing what I love and living in an area like this  </p>
+            <p class="text-uppercase font-weight-bold display-4">:)</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
