--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
     <div id="carouselExampleControls" class="carousel slide h-75" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/img/music.jpg" alt="First slide">
+          <img class="d-block w-100" src="./img/music.jpg" alt="First slide">
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
             <p class="text-uppercase font-weight-bold display-4">5 Things About Me: </p>
-            <p class="text-uppercase font-weight-bold display-4">I Make Music</p>
+            <p class="text-uppercase font-weight-bold display-4">I Make Music.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/img/surf.jpg" alt="Second slide">
+          <img class="d-block w-100" src="./img/surf.jpg" alt="Second slide">
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
             <p class="text-uppercase font-weight-bold display-4">I love to surf </p>
-            <p class="text-uppercase font-weight-bold display-4">and just being around the ocean</p>
+            <p class="text-uppercase font-weight-bold display-4">and just being around the ocean.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/img/skate.jpg" alt="Third slide">
+          <img class="d-block w-100" src="./img/skate.jpg" alt="Third slide">
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-            <p class="text-uppercase font-weight-bold display-4">I like to skate </p>
+            <p class="text-uppercase font-weight-bold display-4">I like to skate. </p>
             </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/img/ice.jpg" alt="Fourth slide">
+          <img class="d-block w-100" src="./img/ice.jpg" alt="Fourth slide">
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
             <p class="text-uppercase font-weight-bold display-4">I hate the heat  </p>
-            <p class="text-uppercase font-weight-bold display-4">I'd rather be cold than hot </p>
+            <p class="text-uppercase font-weight-bold display-4">I'd rather be cold than hot. </p>
           </div>
         </div> 
         <div class="carousel-item">
-          <img class="d-block w-100" src="/img/coast .jpg" alt="fifth slide">
+          <img class="d-block w-100" src="./img/coast .jpg" alt="fifth slide">
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
             <p class="text-uppercase font-weight-bold display-4">My life goal is to continue doing what I love and living in an area like this  </p>
             <p class="text-uppercase font-weight-bold display-4">:)</p>
